--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <version>${spark.version}</version>
 
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-graphx -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-graphx_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
     </dependencies>
 
        <build>
